--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.0",
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "oci-objectstorage": "^1.20.1",
+    "oci-sdk": "^1.20.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
