--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
+    "node-schedule": "^2.0.0",
     "oci-objectstorage": "^1.20.1",
     "oci-sdk": "^1.20.1",
     "path": "^0.12.7"
