atlas discord v1 release

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-schedule": "^2.0.0",
     "oci-objectstorage": "^1.20.1",
     "oci-sdk": "^1.20.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pm2": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
@@ -19,7 +20,7 @@
   "scripts": {
     "test": "node bot.js",
     "dev": "nodemon bot.js",
-    "start": "node bot.js"
+    "start": "pm2 start bot.js"
   },
   "repository": {
     "type": "git",
